# python_fun

./: .gitignore  README.md  setup.cfg  setup.py
fun_lib/: argument_parsing.py  counting.py  fasta.py  main.py  writer.py
scripts/: fun.py
test_data/: data.fasta
tests/: argument_parsing_test.py  counting_test.py  fasta_test.py  main_test.py  writer_test.py
