[metadata]
name = fun
version = file: VERSION
author = Olivier Seret
description = What Tim did next
long_description = file: README.md
author_email = path-help@sanger.ac.uk
url = https://github.com/sanger-pathogens/fun
license = GPLv3
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience  :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:

install_requires =
    nose>=1.3

python_requires = >=3
