[metadata]
name = fun
version = file: VERSION
author = Olivier Seret
description = What Tim did next
long_description = file: README.md
author_email = path-help@sanger.ac.uk
url = https://github.com/sanger-pathogens/fun
license = GPLv3
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience  :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:

install_requires =
    coverage>=6.3.2
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-mock>=3.7.0

[options.entry_points]
console_scripts =
    fun.py = scripts.fun:main

python_requires = >=3.10
